# FCCSW

./: CMakeLists.txt  checkformat  checkformatTestCorrect.cpp  checkformatTestIncorrect.cpp  checkformatTestIncorrectWithoutComments.cpp  init.sh  mkreportindex  mkreportindex.py  mkreportindexfunctions.py
Detector/DetCommon/: CMakeLists.txt
Detector/DetFCChhBaseline1/compact/: FCChh_DectMaster.xml  FCChh_Shielding.xml
Detector/DetSegmentation/tests/options/: phiEtaSegmentation.py
Detector/DetSensitive/tests/options/: testDd4hepCaloSD.py  testDd4hepTrackerSD.py  testSimpleCaloSD.py  testSimpleTrackerSD.py
Detector/doc/: DD4hepInFCCSW.md
Examples/: CMakeLists.txt
Examples/options/: gaussino_pgun_fullsim.py  geant_fastsim.py  geant_fastsim_tklayout.py  geant_fullsim.py  geant_fullsim_field.py  geant_fullsim_pgun_geantino.py  geant_pgun_fullsim.py  pythia_particle_graph.py  read_podio_input.py  simple_pythia.py  simple_workflow.py
Examples/src/: CreateSampleJet.cpp  ParticleGraphTestConsumer.cpp  PodioOutput.cpp  PodioOutput.h  ReadTestConsumer.cpp
FWCore/tests/options/: simple_reader.py
Generation/: CMakeLists.txt
Generation/Generation/: IParticleGraph.h  MomentumRangeParticleGun.h
Generation/src/: MomentumRangeParticleGun.cpp
Generation/src/components/: BuildParticleGraph.cpp  BuildParticleGraph.h  GenParticleFilter.cpp  HepMCConverter.cpp  ParticleGraphTool.cpp  ParticleGraphTool.h
Reconstruction/RecCalorimeter/tests/options/: geant_fullsim_ecal_singleparticles.py  geant_fullsim_hcal_singleparticles.py
Sim/SimDelphesInterface/options/: PythiaDelphes_config.py
Sim/SimDelphesInterface/src/: DelphesSaveChargedParticles.cpp  DelphesSaveChargedParticles.h  DelphesSaveGenJets.cpp  DelphesSaveGenJets.h  DelphesSaveJets.cpp  DelphesSaveJets.h  DelphesSaveNeutralParticles.cpp  DelphesSaveNeutralParticles.h
Sim/SimG4Components/: CMakeLists.txt
Sim/SimG4Components/src/: SimG4Svc.cpp  SimG4Svc.h
Sim/SimG4Components/tests/options/: geant_fastsim_simple.py  geant_fullsim_moreEvents.py
Simulation/SimDelphesInterface/options/: PythiaDelphes_config.py
Simulation/SimG4Com/: CMakeLists.txt
Simulation/SimG4Com/SimG4Com/: ParticleInformationEdm.h
Simulation/SimG4Com/src/: ParticleInformationEdm.cpp
Simulation/SimG4Comps/: CMakeLists.txt
Simulation/SimG4Comps/src/: G4PrimariesFromEdmTool.cpp  G4SaveSmearedParticles.cpp
Simulation/SimG4Fas/: CMakeLists.txt
Simulation/SimG4Fas/src/components/: G4FastSimActions.cpp
Simulation/SimG4Fas/src/lib/: FastSimActions.cpp
Test/TestGeometry/: CMakeLists.txt
cmake/: FindFCCEDM.cmake
config/: geant_pgun_fullsim.py
html/: test.html
